erDiagram
    USER ||--|| CUSTOMER_SEGMENT : "belongs to"
    USER {
        int user_id PK
        string email
        string name
        datetime last_login
        string device_token
        boolean is_subscribed
    }

    CUSTOMER_SEGMENT {
        int segment_id PK
        string segment_name
        string description
    }

    WEBPUSH_CAMPAIGN {
        int campaign_id PK
        string title
        string message_template
        datetime scheduled_time
        string campaign_type
        boolean is_automated
    }

    WEBPUSH_NOTIFICATION {
        int notification_id PK
        int campaign_id FK
        int user_id FK
        string message_content
        datetime sent_time
        datetime delivered_time
        datetime opened_time
        boolean is_clicked
    }

    TRIGGER {
        int trigger_id PK
        string trigger_type
        string conditions
        string action
    }

    WEBHOOK {
        int webhook_id PK
        string endpoint_url
        string authentication_key
        string event_type
    }

    A_B_TEST {
        int test_id PK
        int campaign_id FK
        string variant_a
        string variant_b
        float ctr_a
        float ctr_b
        datetime test_period
    }

    CDP_PROFILE {
        int profile_id PK
        int user_id FK
        json customer_data
        json interaction_history
    }

    USER ||--o{ WEBPUSH_NOTIFICATION : receives
    USER ||--o{ CDP_PROFILE : "has"
    WEBPUSH_CAMPAIGN ||--o{ WEBPUSH_NOTIFICATION : generates
    WEBPUSH_CAMPAIGN ||--o{ A_B_TEST : "has"
    TRIGGER ||--o{ WEBPUSH_CAMPAIGN : "creates"
    WEBHOOK ||--o{ WEBPUSH_NOTIFICATION : "tracks"
    CUSTOMER_SEGMENT ||--o{ USER : contains